fix gap between portfolio items

--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ textarea {
   .portfolio-flex {
     flex-direction: row;
     justify-content: center;
-    margin: 142px;
+    margin: 27px 142px;
     align-items: center;
     justify-content: space-around;
     padding: 0;
